# notes-ui

./: .gitignore  Notes.Md.sln  README.md  package-lock.json  package.json
client/: Dockerfile  deploy.sh  package-lock.json  package.json
client/deploy/: deployment.yml
client/src/: app.css  app.html
client/src/lib/: stores.ts
client/src/lib/components/markdown/: editor.svelte  pre-renderer.svelte
client/src/lib/utils/: noteUtils.ts  websocketUtils.ts
client/src/routes/: +layout.svelte  +page.svelte  +page.ts
proxy/: Dockerfile  deploy.sh  deployment.yml
proxy/Proxy/: Auth.cs  Program.cs  Proxy.csproj  RedisOptions.cs  appsettings.json
proxy/Proxy/Controllers/: AccountController.cs
proxy/Proxy/Pages/: Login.cshtml  Login.cshtml.cs
proxy/Proxy/Properties/: launchSettings.json
server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  deploy.sh
server/deploy/: deployment.yml
server/src/: commands.rs  main.rs  models.rs  websocket_handler.rs
src/: app.css  markdown.css
src/lib/: types.ts
src/lib/components/: darkmode-toggle.svelte  modal.svelte
src/routes/: +layout.svelte  +page.svelte
