[package]
name = "notes-md-api"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.31"
serde_json = "1.0.128"
serde = {version = "1.0.210", features = ["derive"]}
redis = {version = "0.27.3", features = ["tokio-comp", "json"]}
dotenv = "0.15.0"
rocket = "0.5.1"
ws = { package = "rocket_ws", version = "0.1.1" }
